--- a/css/main.css
+++ b/css/main.css
@@ -107,9 +107,6 @@ button {
 }
 
 .menu-button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   margin: 0;
   padding: 0;
   border: none;
@@ -139,8 +136,7 @@ button {
 @media screen and (max-width: 767px) {
   .menu-container {
     display: none;
-    position: absolute;
-    top: 100%;
+    position: fixed;
     left: 0;
     width: 100%;
   }
@@ -150,8 +146,16 @@ button {
     -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
     padding: 20px;
-    height: 796px;
+    height: 100%;
     font-size: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: fixed;
   }
 }
 body {
@@ -467,7 +471,7 @@ body {
 
 .mobile__link-mail {
   display: block;
-  margin-top: 293px;
+  margin-top: auto;
   margin-bottom: 32px;
   font-weight: 500;
   font-size: 34px;
@@ -531,6 +535,10 @@ body {
 
 .linkedIn {
   border-right: none;
+}
+
+.social-mobile {
+  margin-top: auto;
 }
 
 .section-benefits__list .subtitle {
@@ -1153,7 +1161,7 @@ body {
   .section-hero__heading {
     font-size: 26px;
     line-height: 1.16;
-    width: 360px;
+    width: 320px;
   }
 }
 
@@ -1322,6 +1330,13 @@ body {
 @media screen and (max-width: 767px) {
   .footer__block-logo-adress-and-icon {
     display: block;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__block-logo-adress-and-icon {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
 
@@ -1494,7 +1509,7 @@ body {
 }
 
 .mail__newsletter {
-  width: 358px;
+  width: 100%;
   padding-left: 16px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1529,10 +1544,15 @@ body {
   font-size: 16px;
   line-height: 1.25;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 480px) {
   .mail__newsletter {
     margin-bottom: 20px;
     min-width: 450px;
+  }
+}
+@media screen and (min-width: 1199px) {
+  .mail__newsletter {
+    width: 358px;
   }
 }
 
