--- a/sass/layout/mobile.scss
+++ b/sass/layout/mobile.scss
@@ -54,8 +54,12 @@
   pointer-events: initial;
    .mobile-and-logo{
     display: none;
+
+
+
   }
 }
+
 
 // .logo-and-button{
 //   display: flex;
@@ -76,7 +80,9 @@
 // меню
 
  .menu-button {
-  display: inline-flex;
+  // display: inline-flex;
+
+  position: static;
   margin: 0;
   padding: 0;
   border: none;
@@ -89,7 +95,14 @@
 
 .menu-button.is-open .icon-cross {
   display: block;
+  
 }
+
+// .menu-button.is-open{
+// position: absolute;
+// top: 10px ;
+// left: 100%;
+// }
 
 .menu-button.is-open .icon-menu {
   display: none;
@@ -111,8 +124,9 @@
 
   @media screen and (max-width: 767px) {
     display: none;
-    position: absolute;
-    top: 100%;
+    // position: absolute;
+    position: fixed;
+    // top: 100%;
     left: 0;
     width: 100%;
 
@@ -122,8 +136,12 @@
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
       padding: 20px;
       // text-align: center;
-      height: 796px;
+      // height: 796px;
+      height: 100%;
       font-size: 20px;
+      display: flex;
+      flex-direction: column;
+      position: fixed;
     }
   }
 
