--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,20 +26,19 @@ body {
     // 2. Tablet screen - 768px
     // 3. Desktop screen - 1200px
   
-    min-width: 320px;
-    max-width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-  
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
+    @media screen and (min-width: 480px) {
+      width: 480px;
+    }
     //  Tablet screen
     @media screen and (min-width: 768px) {
-      max-width: 768px;
+      width: 768px;
     }
     //  Desktop screen
     @media screen and (min-width: 1200px) {
-      max-width: 1200px;
+      width: 1200px;
     }
   }
   /* cекции */
