--- a/sass/layout/_emploees.scss
+++ b/sass/layout/_emploees.scss
@@ -2,15 +2,35 @@
     display: block;
     max-width: 100%;
      height: auto;
+     
     
   }
-  
+  .section-employees source{
+    @media screen  and (min-width: 768px)and (max-width: 1199px) {
+      // display: block;
+     max-width: 354px;  
+     }  
+   
+  }
   
   .section-employees__item {
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen  and (max-width: 767px) {
+      margin-bottom: 30px;  
+    }   
+    @media screen  and (min-width: 768px)and (max-width: 1199px) {
+     width: 354px; 
+    }  
+  }
+
+  .section-employees__item:last-child{
+    @media screen  and (max-width: 767px) {
+      margin-bottom: 0;  
+    }   
   }
   
   
@@ -23,7 +43,16 @@
     gap: 30px;
     flex-wrap: wrap; 
     justify-content: center;
-  }
+    @media screen  and (max-width: 767px) {
+      display: block;
+      
+    }
+   
+       
+  } 
+ 
+    
+  
   .employee-information__jobtitle {
     text-align: center;
     margin-bottom: 16px;
