--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -213,8 +213,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile__link-mail{
 display: block;
-// margin-top: 293px;
-margin-top: auto;
+margin-top: 200px;
+// margin-top: auto;
 margin-bottom: 32px;
 font-weight: 500;
 font-size: 34px;
@@ -236,6 +236,7 @@ font-size: 24px;
 line-height: 1.17;
 letter-spacing: 0.02em;
 margin-bottom: 64px;
+// margin-bottom: auto;
 color: #757575;
 transition-property: color; 
 transition-duration: 250ms; 
@@ -252,12 +253,14 @@ letter-spacing: 0.02em;
 color: #2196F3;
 
 }
+
 .social-mobile_list{
   display:flex;
   justify-content: center;
-  gap: 10px
-
+  gap: 10px;
+  margin-top: auto;
 }
+
 .social-mobile_link{
   padding-right: 10px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
@@ -266,6 +269,4 @@ color: #2196F3;
 .linkedIn{
   border-right:none;
 }
-.social-mobile{
-margin-top: auto;
-}
+
