--- a/sass/layout/mobile.scss
+++ b/sass/layout/mobile.scss
@@ -119,7 +119,7 @@
   // padding-top: 48px;
 
   // text-align: center;
-  height: 750px;
+  max-height: 750px;
   font-size: 20px;
 
   @media screen and (max-width: 767px) {
@@ -129,19 +129,23 @@
     // top: 100%;
     left: 0;
     width: 100%;
+   
 
     &.is-open {
       display: block;
       background: #FFFFFF;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-      padding: 20px;
+      padding: 40px;
       // text-align: center;
       // height: 796px;
       height: 100%;
       font-size: 20px;
       display: flex;
       flex-direction: column;
+      
       position: fixed;
+     
+      
     }
   }
 
