--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,29 +8,29 @@
     to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)
-  ), url(../images/Hero/hero-mob-1x.jpg);
-
+  ), url(images/Hero/hero-mob-1x.jpg);
+  
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image:linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
-    ), url(../images/Hero/hero-mob-2x.jpg);
-  }
+    ),url(images/Hero/hero-mob-2x.jpg);
+  } 
   // tablet screen
   @media screen and (min-width: 481px) {
     background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
-    ),url(../images/Hero/hero-tab-1x.jpg);
+    ),url(images/Hero/hero-tab-1x.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image:linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
-      ), url(../images/Hero/hero-tab-2x.jpg);
+      ),url(images/Hero/hero-tab-2x.jpg);
     }
   }
   // desktop screen
